--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
 </head>
 <body>
     <div class="first">
-        <div class="middle">
-            <div class="last">
-                <img src="profile.jpg" class="profile" alt="image">
-                <form>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="xyz@gmail.com" required><br>
-                    <label for="pwd">Password</label>
-                    <input type="password" id="pwd" placeholder="*********"><br>
-                    <button class="btn">Login</button>
-                </form>
-            </div>
-        </div>
+        <form>
+            <h2>LOGIN</h2>
+            <img src="profile.jpg" class="profile" alt="image">
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="xyz@gmail.com" required><br>
+            <label for="pwd">Password</label>
+            <input type="password" id="pwd" placeholder="&#9679; &#9679; &#9679; &#9679; &#9679; &#9679; &#9679; &#9679;"><br>
+            <button class="btn">Login</button>
+        </form>
     </div>
 </body>
 </html>
